--- a/client/styles/questions-list.less
+++ b/client/styles/questions-list.less
@@ -19,7 +19,9 @@
       color: @primary-color;
     }
   }
-  input {
+  input,
+  textarea {
+    border: 1px solid fadein(@background-color, 5%);
     font-size: 1rem;
     padding: .25rem;
     width: 100%;
