--- a/client/styles/questions-list.less
+++ b/client/styles/questions-list.less
@@ -21,6 +21,7 @@
   }
   input,
   textarea {
+    background-color: @input-box-color;
     border: 1px solid fadein(@background-color, 5%);
     font-size: 1rem;
     padding: .25rem;
