--- a/client/styles/variables.import.less
+++ b/client/styles/variables.import.less
@@ -2,6 +2,7 @@
 @primary-color: #FF4F20;
 @secondary-color: #FFC458;
 
+@input-box-color: #fff;
 @border-color: darken(@primary-color, 10%);
 @text-color: #333;
 @link-color: #fff;
@@ -19,6 +20,7 @@
 .standard-button() {
   cursor: pointer;
   font-size: 1rem;
+  line-height: 1;
   color: @link-color;
   background-color: @primary-color;
   border-radius: 3px;
