--- a/client/styles/ui/forms.import.less
+++ b/client/styles/ui/forms.import.less
@@ -10,6 +10,8 @@ label {
 input[type=text],
 input[type=number],
 input[type=date],
+input[type=email],
+input[type=password],
 textarea,
 select {
   background-color: @input-box-color;
