--- a/client/styles/ui/forms.import.less
+++ b/client/styles/ui/forms.import.less
@@ -21,6 +21,10 @@ select {
   width: 100%;
   margin-bottom: 1.25rem;
   flex-grow: 1;
+
+  table & {
+    margin-bottom: 0;
+  }
 }
 
 form h1 {
@@ -28,7 +32,6 @@ form h1 {
 }
 
 .form-align-group {
-
   display: flex;
 
   label {
