--- a/client/styles/admin.less
+++ b/client/styles/admin.less
@@ -1,1 +1,34 @@
+@import "./variables.import.less";
 
+.container.admin {
+  max-width: 960px;
+}
+
+.survey-details {
+  th.description {
+    width: 50%;
+  }
+
+  textarea {
+    height: 10em;
+  }
+}
+
+.add-checkbox-question-options {
+  margin: 1rem auto;
+  width: 80%;
+  padding: 1rem 2rem;
+  border: 1px solid fadein(@background-color, 5%);
+  box-sizing: border-box;
+
+  ul {
+    list-style: none;
+  }
+
+  .form-align-group label {
+    width: 4rem;
+    text-align: right;
+    padding-right: .5rem;
+    padding-top: .25rem;
+  }
+}
