--- a/client/styles/main.less
+++ b/client/styles/main.less
@@ -24,7 +24,7 @@ a {
 }
 
 .container {
-  width: 640px;
+  max-width: 640px;
   margin: 2rem auto;
 }
 
@@ -35,6 +35,7 @@ a {
   border-radius: 3px;
   border: 3px solid darken(@empty-state-color, 8%);
   color: lighten(@text-color, 20%);
+  text-align: center;
 }
 
 table {
