--- a/client/styles/admin.less
+++ b/client/styles/admin.less
@@ -14,6 +14,18 @@
   }
 }
 
+.questions {
+  ul {
+    list-style: none;
+  }
+
+  .icon-edit,
+  .icon-trash {
+    padding: .5rem;
+    margin-left: .25rem;
+  }
+}
+
 .add-checkbox-question-options {
   margin: 1rem auto;
   width: 80%;
