Add logo, add footer. Close #8

--- a/client/styles/main.less
+++ b/client/styles/main.less
@@ -24,8 +24,20 @@ a {
   text-decoration: none;
 }
 
-.container {
+.small-row,
+.wide-row {
+  margin: 0 auto;
+}
+
+.small-row {
   max-width: 640px;
+}
+
+.wide-row {
+  max-width: 960px;
+}
+
+.container {
   margin: 2rem auto;
 }
 
