--- a/client/styles/variables.import.less
+++ b/client/styles/variables.import.less
@@ -9,6 +9,7 @@
 @empty-state-color: #fff;
 
 @border-radius: 3px;
+@footer-height: 8rem;
 
 .box-shadow(@box-shadow) {
   -webkit-box-shadow: @box-shadow;
