--- a/client/styles/ui/forms.import.less
+++ b/client/styles/ui/forms.import.less
@@ -47,7 +47,11 @@ form h1 {
     margin-left: 10rem;
   }
 
-  button:not(:first-child) {
+  :not(:first-child) {
     margin-left: .5rem;
+  }
+
+  .cancel {
+    margin-top: 1.3rem;
   }
 }
