--- a/client/styles/variables.import.less
+++ b/client/styles/variables.import.less
@@ -1,9 +1,9 @@
 @background-color: rgba(0, 0, 0, .05);
-@primary-color: #FF4F20;
-@secondary-color: #FFC458;
+@primary-color: #a22f10;
+@secondary-color: #ffc458;
 
 @input-box-color: #fff;
-@border-color: darken(@primary-color, 10%);
+@border-color: darken(@primary-color, 5%);
 @text-color: #333;
 @link-color: @primary-color;
 @empty-state-color: #fff;
