--- a/client/styles/nav.less
+++ b/client/styles/nav.less
@@ -3,10 +3,9 @@
 .nav {
   background-color: @secondary-color;
   height: 4rem;
-  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.02);
-  border-bottom: 1px solid lighten(@secondary-color, 15%);
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.05) inset;
+  border-bottom: 1px solid darken(@secondary-color, 10%);
 
-  .admin > a,
   .login-link-text {
     .standard-button
   }
@@ -15,5 +14,12 @@
     height: 100%;
     display: inline-block;
     margin-left: 1.25rem;
+    color: @primary-color;
+    margin-top: 1.25rem;
+
+    a {
+      color: @primary-color;
+      margin-right: 1rem;
+    }
   }
 }
