--- a/client/styles/main.less
+++ b/client/styles/main.less
@@ -2,6 +2,8 @@
 
 @import "./variables.import.less";
 
+@import "./frontend/survey-form.import.less";
+
 @import "./ui/forms.import.less";
 @import "./ui/buttons.import.less";
 
