--- a/client/styles/meteor-login.less
+++ b/client/styles/meteor-login.less
@@ -1,3 +1,5 @@
+@import "./variables.import.less";
+
 #login-buttons {
   height: 100%;
   float: right;
@@ -6,6 +8,12 @@
    a {
     text-decoration: none;
   }
+}
+
+.login-link-text {
+  color: @primary-color;
+  margin-top: 1.25rem;
+  display: inline-block;
 }
 
 #login-buttons .login-close-text {
