--- a/client/js/surveys/views/survey.ng.html
+++ b/client/js/surveys/views/survey.ng.html
@@ -1,9 +1,8 @@
 <div ng-if="(currentUser || !activeSurvey.require_sign_in) && activeSurvey.active">
   <h1 ng-bind="activeSurvey.name"></h1>
+  <form ng-if="!currentUser.has_submitted" class="survey" name="survey">
   <div class="description" marked="activeSurvey.description">
-
   </div>
-  <form ng-if="!user.has_submitted" class="survey" name="survey">
   <ul class="survey-question-list">
     <li class="survey-question"
       ng-repeat="question in newResponse.questions"
@@ -14,8 +13,7 @@
       class="submit-survey-responses"
       ng-click="submit(newResponse)">Submit</button>
   </form>
-
-  <div ng-if="user.has_submitted" class="has-submitted empty-state">
+  <div ng-if="currentUser.has_submitted" class="has-submitted empty-state">
     Thanks for submitting your thoughts!
   </div>
 </div>
