--- a/client/styles/frontend/survey-form.import.less
+++ b/client/styles/frontend/survey-form.import.less
@@ -1,3 +1,26 @@
+.frontend {
+  font-family: 'clearsans', Helvetica, sans-serif;
+  font-size: 1.2rem;
+
+  p {
+    margin-bottom: .8rem;
+  }
+
+  .question {
+    font-weight: bold;
+    font-size: 1.2em;
+  }
+
+  .answer {
+    margin: 1rem 1rem 0;
+  }
+}
+
 input[type=text].other {
-  width: 95%;
+  width: 85%;
+}
+
+input[type=radio] {
+  margin-right: .2rem;
+  vertical-align: middle;
 }
