--- a/client/styles/main.less
+++ b/client/styles/main.less
@@ -1,4 +1,5 @@
 @import "./fonts/icon-font.import.less";
+@import "./fonts/fonts.import.less";
 
 @import "./variables.import.less";
 
@@ -15,15 +16,20 @@
 
 body {
   background-color: fadeout(@secondary-color, 95%);
-  font-family: 'Helvetica';
+  font-family: 'clearsans', Helvetica;
   line-height: 1.6;
 }
 
 a {
   cursor: pointer;
   color: @link-color;
-  transition: background-color .2s;
+  transition: background-color .2s, color .2s;
   text-decoration: none;
+
+  &:hover {
+    color: lighten(@primary-color, 20%);
+  }
+
 }
 
 h1,
