--- a/client/styles/nav.less
+++ b/client/styles/nav.less
@@ -14,7 +14,7 @@
     margin-top: 1.25rem;
 
     a {
-      color: @primary-color;
+      color: @link-color;
       margin-right: 1rem;
     }
   }
