--- a/client/js/admin/views/admin.ng.html
+++ b/client/js/admin/views/admin.ng.html
@@ -27,6 +27,9 @@
   </tbody>
 </table>
 <small>
+  <a ng-click="sendTestEmail()" title="Send test email">Send test email</a>.
+</small>
+<small>
   Reset:
   <a ng-click="resetUsers()" title="Reset Users">Users</a>,
   <a ng-click="clearResults()" title="Clear Results">Responses</a>
