--- a/client/js/surveys/views/survey.ng.html
+++ b/client/js/surveys/views/survey.ng.html
@@ -1,18 +1,20 @@
 <div ng-if="(currentUser || !activeSurvey.require_sign_in) && activeSurvey.active" class="frontend">
   <h1 ng-bind="activeSurvey.name"></h1>
   <form ng-if="!currentUser.has_submitted" class="survey" name="survey">
-  <div class="description" marked="activeSurvey.description">
-  </div>
-  <ul class="survey-question-list">
-    <li class="survey-question"
-      ng-repeat="question in newResponse.questions"
-      survey-question="question">
-    </li>
-  </ul>
+    <div class="description"
+      marked="activeSurvey.description">
+    </div>
+    <ul class="survey-question-list">
+      <li class="survey-question"
+        ng-repeat="question in newResponse.questions"
+        survey-question="question">
+      </li>
+    </ul>
     <button ng-disabled="!survey.$valid"
       class="submit-survey-responses"
       ng-click="submit(newResponse)">Submit</button>
   </form>
+
   <div ng-if="currentUser.has_submitted" class="has-submitted empty-state">
     Thanks for submitting your thoughts!
   </div>
