--- a/client/styles/survey.less
+++ b/client/styles/survey.less
@@ -2,4 +2,11 @@
 
 .survey-question-list {
   list-style: none;
+
+  li {
+    margin-top: 1rem;
+  }
+  li:first-child {
+    margin-top: 0;
+  }
 }
