--- a/client/styles/main.less
+++ b/client/styles/main.less
@@ -2,11 +2,13 @@
 @import "./fonts/fonts.import.less";
 
 @import "./variables.import.less";
-
-@import "./frontend/survey-form.import.less";
+@import "./animations.import.less";
 
 @import "./ui/forms.import.less";
+@import "./ui/messages.import.less";
 @import "./ui/buttons.import.less";
+
+@import "./frontend/survey-form.import.less";
 
 * {
   padding: 0;
@@ -67,9 +69,59 @@ p {
   width: 100%;
   background-color: @empty-state-color;
   border-radius: 3px;
-  border: 3px solid darken(@empty-state-color, 8%);
+  .box-shadow(0 0 4px fadeout(@text-color, 90%));
+  // border: 3px solid darken(@empty-state-color, 8%);
   color: lighten(@text-color, 20%);
   text-align: center;
+}
+
+.loading {
+  width: 100px;
+  height: 100px;
+
+  span {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    display: block;
+    background: transparent;
+    border: 10px solid darken(@primary-color, 10%);
+    border-radius: 100%;
+    transition: all 0.5s ease;
+  }
+
+  span:first-child {
+    margin-left: -15px;
+    margin-top: -15px;
+    width: 30px;
+    height: 30px;
+    border-color: @primary-color;
+    border-right-color: transparent;
+    border-bottom-color: transparent;
+    .animation(spin, 2s, infinite, linear);
+  }
+
+  span:nth-child(2) {
+    margin-left: -25px;
+    margin-top: -25px;
+    width: 50px;
+    height: 50px;
+    border-color: lighten(@primary-color, 20%);
+    border-bottom-color: transparent;
+    // border-right-color: transparent;
+    .animation(spin, 4s, infinite, linear);
+  }
+
+  span:nth-child(3) {
+    margin-left: -35px;
+    margin-top: -35px;
+    width: 70px;
+    height: 70px;
+    border-color: lighten(@primary-color, 10%);
+    border-top-color: transparent;
+    border-bottom-color: transparent;
+    .animation(spin, 3s, infinite, linear);
+  }
 }
 
 .hidden {
