--- a/client/styles/nav.less
+++ b/client/styles/nav.less
@@ -18,4 +18,15 @@
       margin-right: 1rem;
     }
   }
+
+  .registration {
+    float: right;
+    margin-right: 2rem;
+
+    .username {
+      display: inline-block;
+      margin-right: 2rem;
+    }
+
+  }
 }
