--- a/client/styles/ui/buttons.import.less
+++ b/client/styles/ui/buttons.import.less
@@ -2,6 +2,9 @@ button {
   .standard-button;
 }
 
-#login-buttons .login-button, .accounts-dialog .login-button {
+#login-buttons .login-button,
+.accounts-dialog .login-button,
+.button {
   .standard-button;
+  color: white;
 }
