--- a/client/styles/variables.import.less
+++ b/client/styles/variables.import.less
@@ -1,6 +1,7 @@
 @background-color: rgba(0, 0, 0, .05);
 @primary-color: #a22f10;
 @secondary-color: #ffc458;
+@success-color: #a31039;
 
 @input-box-color: #fff;
 @border-color: darken(@primary-color, 5%);
@@ -32,11 +33,13 @@
   &:hover:not([disabled]) {
     background-color: lighten(@primary-color, 15%);
     border: 1px solid lighten(@border-color, 15%);
+    color: @input-box-color;
   }
 
   &[disabled] {
     cursor: not-allowed;
     background-color: fadeout(@primary-color, 30%);
     border-color: fadeout(@border-color, 30%);
+    color: @input-box-color;
   }
 }
