Upgrade to new angular

--- a/client/styles/main.less
+++ b/client/styles/main.less
@@ -9,6 +9,7 @@
 @import "./ui/buttons.import.less";
 
 @import "./frontend/survey-form.import.less";
+@import "./auth.import.less";
 
 * {
   padding: 0;
@@ -52,13 +53,14 @@ p {
   margin: 0 auto;
 }
 
+.wide-row {
+  max-width: 960px;
+}
+
 .small-row {
   max-width: 640px;
 }
 
-.wide-row {
-  max-width: 960px;
-}
 
 .container {
   margin: 2rem auto 3rem;
