Add if statements to manage.ng.html

--- a/client/js/manage/views/manage.ng.html
+++ b/client/js/manage/views/manage.ng.html
@@ -21,8 +21,8 @@
   </tr>
   </tbody>
 </table>
-<small><a ng-click="exportAllResponses()" title="export all responses"><i class="icon-export"></i> Download CSV</a></small>.
-<small>
+<small ng-hide="on_sandstorm"><a ng-click="exportAllResponses()" title="export all responses"><i class="icon-export"></i> Download CSV</a></small>.
+<small ng-hide="on_sandstorm">
   <a ng-click="sendTestEmail()" title="Send test email">Send test email</a>.
 </small>
 <small>
