--- a/client/styles/manage.less
+++ b/client/styles/manage.less
@@ -12,13 +12,11 @@
   th.name {
     width: 20%;
   }
-
   td {
     vertical-align: top;
   }
-
   textarea {
-    height: 10em;
+    height: 6rem;
   }
 }
 
