--- a/client/styles/fonts/icon-font.import.less
+++ b/client/styles/fonts/icon-font.import.less
@@ -24,6 +24,34 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+&.spin {
+		 -moz-animation: fa-spin 2s infinite linear;
+	-webkit-animation: fa-spin 2s infinite linear;
+          animation: fa-spin 2s infinite linear;
+}
+
+@-webkit-keyframes fa-spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(359deg);
+            transform: rotate(359deg);
+  }
+}
+
+@keyframes fa-spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(359deg);
+            transform: rotate(359deg);
+  }
+}
+
 .icon-add-to-list:before {
 	content: "\e600";
 }
