--- a/client/js/surveys/views/survey.ng.html
+++ b/client/js/surveys/views/survey.ng.html
@@ -1,4 +1,4 @@
-<div ng-if="(currentUser || !activeSurvey.require_sign_in) && activeSurvey.active" class="frontend">
+<div ng-if="(currentUser || !activeSurvey.require_sign_in) && activeSurvey.active && !(currentUser.has_submitted || has_submitted)" class="frontend">
   <h1 ng-bind="activeSurvey.name"></h1>
   <form class="survey" name="survey">
     <div class="description"
@@ -16,15 +16,15 @@
       ng-disabled="!survey.$valid"
       class="submit-survey-responses"
       ng-click="submit(newResponse)">Submit</button>
-
-    <p
-      ng-if="(currentUser.has_submitted|| has_submitted)"
-      >
-      <a href="/submitted" class="icon-cog spin"> </a>Thanks! Just finishing up...
-    </p>
-
   </form>
 </div>
+
+<p
+  ng-if="(currentUser.has_submitted ||  has_submitted)"
+  >
+  <a href="/submitted" class="icon-cog spin"> </a>Thanks! Just finishing up...
+</p>
+
 
 <div ng-if="activeSurvey === null || (!activeSurvey.active && loaded) || (activeSurvey.active && activeSurvey.questions.length === 0)" class="empty-state">
   There is no active survey published yet.
