Clarify share information. Close #35

--- a/client/js/manage/views/manage.ng.html
+++ b/client/js/manage/views/manage.ng.html
@@ -30,3 +30,26 @@
   <a ng-click="resetUsers()" title="Reset Users">Users</a>,
   <a ng-click="clearResults()" title="Clear Results">Responses</a>
 </small>
+
+<hr>
+
+<p>
+  You can share this survey with other people, either other collaborators who can edit it, or respondents.
+</p>
+<h2>To share privately</h2>
+  <p>
+    Click the button below to use Sandstorm's "Share Access" feature and share it with your contacts.
+  </p>
+
+<h2>To share publicly</h2>
+  <p>
+    If you want to share a link to the survey that anyone can fill in, click the same button, but choose to share a link.
+  </p>
+  <p>
+    You can then shorten that URL if you want to make it a bit more accessible.
+  </p>
+
+<a class="button" ng-click="share()">
+  <i class="icon-share"></i>
+  Share Survey using Sandstorm
+</a>
