--- a/client/styles/survey.less
+++ b/client/styles/survey.less
@@ -10,3 +10,16 @@
     margin-top: 0;
   }
 }
+
+.has-submitted {
+
+  hr {
+    max-width: 400px;
+    margin: 1.5em auto;
+  }
+
+  p {
+    max-width: 400px;
+    margin: 0 auto;
+  }
+}
