--- a/client/js/surveys/views/submitted.ng.html
+++ b/client/js/surveys/views/submitted.ng.html
@@ -3,5 +3,29 @@
   <span btf-markdown="activeSurvey.endNote" ng-show="activeSurvey.endNote">
   </span>
 
-  <a ng-if="on_sandstorm && activeSurvey.canBeShared" ng-click="share()"><i class="icon-share"></i> Share Survey</a>
+  <hr/>
+
+  <div ng-if="activeSurvey.canBeShared">
+    <p>
+      You can share with other people.
+    </p>
+
+    <h2>To share privately</h2>
+      <p>
+        Click the button below to use Sandstorm's "Share Access" feature and share it with your contacts.
+      </p>
+
+    <h2>To share publicly</h2>
+      <p>
+        If you want to share a link to the survey that anyone can fill in, click the same button, but choose to share a link.
+      </p>
+      <p>
+        You can then shorten that URL if you want to make it a bit more accessible.
+      </p>
+
+    <a class="button" ng-click="share()">
+      <i class="icon-share"></i>
+      Share Survey using Sandstorm
+    </a>
+  </div>
 </div>
