--- a/client/styles/manage.less
+++ b/client/styles/manage.less
@@ -25,6 +25,22 @@
     list-style: none;
   }
 
+  li {
+    padding: .25rem .5rem;
+  }
+
+  li:nth-child(odd) {
+    background-color: @input-box-color;
+  }
+
+  .question-overview {
+    margin-bottom: .25rem;
+  }
+
+  .manage-questions {
+    float: right;
+  }
+
   .icon-edit,
   .icon-trash {
     padding: .5rem;
