[WIP] Trying to add publishing to a static page

--- a/client/js/manage/views/manage.ng.html
+++ b/client/js/manage/views/manage.ng.html
@@ -58,3 +58,11 @@
   <i class="icon-share"></i>
   Share Survey using Sandstorm
 </a>
+
+<hr>
+
+<div>
+  Want the results of this survey published as an RSS Feed?
+
+  <a ng-click="publishAsRSSFeed()" title="publish as an rss feed">Publish</a>
+</div>
