Close #46. Prevent 'enter' on inputs to submit the form

--- a/client/js/surveys/views/survey.ng.html
+++ b/client/js/surveys/views/survey.ng.html
@@ -13,6 +13,7 @@
 
     <button
       ng-if="!(currentUser.has_submitted|| has_submitted)"
+      type="button"
       ng-disabled="!survey.$valid"
       class="submit-survey-responses"
       ng-click="submit(newResponse)">Submit</button>
