Close #51. Add check that there are at least two radio button options for a survey.

--- a/client/styles/manage.less
+++ b/client/styles/manage.less
@@ -48,6 +48,10 @@
   }
 }
 
+.icon-align-vertical-middle {
+  cursor: move;
+}
+
 .add-question-with-options {
   padding: 1.5rem 8.5rem;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
