Close #49. Other text can be set to something else

--- a/client/styles/manage.less
+++ b/client/styles/manage.less
@@ -76,3 +76,25 @@
     margin-left: 2rem;
   }
 }
+
+.other-option-label {
+
+  input {
+    display: none;
+
+    float: right;
+    text-align: right;
+  }
+
+  &.active {
+    span {
+      display: none;
+    }
+
+    input {
+      display: block;
+    }
+  }
+}
+
+
